[B]Version 1.1.25[/B]
Fix beeg listing